dim/spec/test_input/invalid_input/modules/duplicate_module.dim
document: test

test_id:
  text: test_value